# address-book-service

./: .bzrignore  .gitignore  CMakeLists.txt  README  README.md  README.test  config.h.in
cmake/: chewieplugin.cmake  lcov.cmake
cmake/modules/: Translations.cmake
cmake/vala/: UseVala.cmake
common/: CMakeLists.txt  dbus-service-defs.h  fetch-hint.cpp  fetch-hint.h  filter.cpp  filter.h  qindividual.cpp  sort-clause.cpp  sort-clause.h  source.cpp  source.h  vcard-parser.cpp  vcard-parser.h
contacts/: CMakeLists.txt  contacts-service.cpp  contacts-service.h  qcontact-backend.cpp  qcontact-backend.h  qcontact-engineid.cpp  qcontactcollectionfetchrequest-data.cpp  qcontactcollectionfetchrequest-data.h  qcontactfetchbyidrequest-data.cpp  qcontactfetchbyidrequest-data.h  qcontactfetchrequest-data.cpp  qcontactfetchrequest-data.h  qcontactremoverequest-data.cpp  qcontactremoverequest-data.h  qcontactrequest-data.cpp  qcontactrequest-data.h  qcontactsaverequest-data.cpp  qcontactsaverequest-data.h  request-data.cpp  request-data.h
data/: CMakeLists.txt  com.canonical.address-book.service.in  com.canonical.galera.service.in  com.canonical.pim.AddressBook.gschema.xml  com.canonical.pim.service.in
dbus/: CMakeLists.txt  com.canonical.pim.updater.service.in
debian/: address-book-service-autopilot.install  address-book-service-dummy.install  address-book-service-testability.install  address-book-service.install  address-book-updater.install  changelog  control  copyright  evolution-data-server-ubuntu-dev.install  evolution-data-server-utouch-dev.install  evolution-data-server-utouch.install  galera-contact-service.install  qtcontact5-galera.install  rules
eds-extension/: CMakeLists.txt  e-source-ubuntu.c  e-source-ubuntu.h  evolution-data-server-ubuntu.pc.in  module-ubuntu-sources.c
examples/: contacts.py
folks/: CMakeLists.txt
folks/dummy/backend/: CMakeLists.txt
folks/dummy/lib/: CMakeLists.txt  folks-dummy.vapi
lib/: CMakeLists.txt  addressbook-adaptor.cpp  addressbook-adaptor.h  addressbook.cpp  addressbook.h  contact-less-than.cpp  contact-less-than.h  contacts-map.cpp  contacts-map.h  contacts-utils.cpp  detail-context-parser.cpp  detail-context-parser.h  dirtycontact-notify.cpp  dirtycontact-notify.h  gee-utils.cpp  gee-utils.h  qindividual.cpp  qindividual.h  source.cpp  update-contact-request.cpp  update-contact-request.h  view-adaptor.cpp  view-adaptor.h  view.cpp  view.h
po/: CMakeLists.txt  address-book-service.pot  am.po  ast.po  be.po  br.po  ca.po  de.po  en_GB.po  es.po  fa.po  fi.po  fr.po  gd.po  gl.po  he.po  hu.po  it.po  lv.po  nl.po  pl.po  pt.po  ro.po  ru.po  sk.po  sr.po  uk.po
qcontacts/: CMakeLists.txt  contacts-service.cpp  contacts-service.h  galera.json  qcontact-backend.cpp  qcontact-backend.h  qcontact-engineid.cpp  qcontact-engineid.h  qcontactremoverequest-data.h  qcontactsaverequest-data.cpp  qcontactsaverequest-data.h  request-data.cpp  request-data.h
src/: CMakeLists.txt  addressbook-adaptor.cpp  addressbook-adaptor.h  addressbook.cpp  addressbook.h  com.canonical.galera.addressbook.xml  com.canonical.galera.view.xml  contacts-map.cpp  contacts-map.h  contacts-utils.cpp  contacts-utils.h  detail-context-parser.cpp  detail-context-parser.h  gee-utils.cpp  gee-utils.h  main.cpp  qindividual.cpp  qindividual.h  source.cpp  source.h  update-contact-request.cpp  update-contact-request.h  view-adaptor.cpp  view-adaptor.h  view.cpp  view.h
tests/: CMakeLists.txt
tests/address_book_service_testability/: fixture_setup.py  helpers.py
tests/address_book_service_testability/tests/: test_dummy_backend.py
tests/autopilot/: vcard.vcf
tests/autopilot/address_book_service/: fixture_setup.py
tests/autopilot/address_book_service/tests/: __init__.py  test_dummy_backend.py
tests/data/: CMakeLists.txt
tests/tst_tools/: CMakeLists.txt  tst-buteo-import-no-accounts.cpp  tst-buteo-import.cpp
tests/tst_tools/accounts/: CMakeLists.txt
tests/tst_tools/accounts/empty-database/: CMakeLists.txt
tests/tst_tools/accounts/full-database/: CMakeLists.txt  accounts.db
tests/tst_tools/mock/: mock-buteo.py  mock-galera.py  mock-sync-monitor.py
tests/unittest/: CMakeLists.txt  address-book-test.cpp  addressbook-server.cpp  addressbook-test.cpp  base-client-test.cpp  base-client-test.h  base-eds-test.h  clause-test.cpp  contact-accounts-test.cpp  contact-avatar-test.cpp  contact-collection-test.cpp  contact-link-test.cpp  contact-sort-test.cpp  contact-timestamp-test.cpp  contactmap-test.cpp  dummy-backend-defs.h  dummy-backend.cpp  dummy-backend.h  fetch-hint-test.cpp  folks-dummy-base-test.cpp  folks-dummy-base-test.h  qcontacts-async-request-test.cpp  qcontacts-create-source-test.cpp  qcontacts-test.cpp  readonly-prop-test.cpp  run-eds-test.sh  scoped-loop.cpp  scoped-loop.h  service-life-cycle-test.cpp  sort-clause-test.cpp  vcardparser-test.cpp
updater/: CMakeLists.txt  ab-i18n.h  ab-notify-message.cpp  ab-notify-message.h  ab-update-adaptor.cpp  ab-update-adaptor.h  ab-update-buteo-import.cpp  ab-update-buteo-import.h  ab-update-main.cpp  ab-update-module.cpp  ab-update-module.h  ab-update.cpp  ab-update.h  main.cpp
upstart/: CMakeLists.txt  address-book-service.conf  address-book-service.conf.in  address-book-update.conf.in  address-book-updater.conf.in
vcard/: CMakeLists.txt  vcard-parser.cpp  vcard-parser.h
